2016-05-07  Per Bothner  <per@bothner.com>

	* kawa.bat.in: Now kawa.bar is created by configure, not make.
	Put in a hook for jline.jar.

2016-03-12  Per Bothner  <per@bothner.com>

	Enable "binary distributions" using jawa.sh and jline2.
	* kawa.sh.in: Enable better path searching.
	Assume jline library is in ../lib.
	* Makefile.am (KAWALIB): Update.
	* kawapath.c: Likewise.

2016-01-19  Per Bothner  <per@bothner.com>

	* kawa.c (main): Fix previous change.

2016-01-09  Per Bothner  <per@bothner.com>

	* kawa.c: Remove isatty test - deal with it at the Java level.

2015-12-21  Per Bothner  <per@bothner.com>

	* configure.ac: Share logic by using ../config.classpath.
	* Makefile.am (CDEFS): Fix use of conf_classpath.

2015-12-16  Per Bothner  <per@bothner.com>

	* kawa.c: Add readline escape characters around simple
	ANSI escape sequences in the prompt.

2015-05-13  Per Bothner  <per@bothner.com>

	* configure.ac: Add check for libhistory. Some platforms such as
	OpenBSD do not have a libhistory and therefore Kawa fails to build.
	Patch submitted anonymously to Savannah #45069
	"kawa frontend unconditionally links with libhistory".
	* Makefile.am (kawa-LDADD): Add value of LIBHISTORY.

2015-04-29  Per Bothner  <per@bothner.com>

	* cgi-servlet.c: Include unistd.h to avoid a warning about execvp.

2015-02-17  Per Bothner  <per@bothner.com>

	* Makefile.am (install-binPROGRAMS): Remove use of LIBTOOL_INSTALL.

2014-11-26  Per Bothner  <per@bothner.com>

	* kawa.sh.in: Fix array handling and make it more portable.

2014-11-19  Per Bothner  <per@bothner.com>

	* kawa.sh.in: Add support for -Dkawa.command.line.
	Also shift any -D and -J options before the kawa.repl class name.

2014-11-18  Per Bothner  <per@bothner.com>

	* kawa.sh.in: New file - template for kawa.sh.

2014-10-14  Per Bothner  <per@bothner.com>

	* configure.in (AC_INIT): Set version to 1.90.

2014-02-21  Per Bothner  <per@bothner.com>
